--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
+
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
@@ -14,6 +16,7 @@
            height="730"
         />
     </header>
+
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
@@ -23,28 +26,26 @@
           <li>The body element represents the visible content shown to the user.</li>
           <li>This is the first code i learn</li>
         </ul>
-        <h2>HTML Meaning</h2>
-          <li>Hyper</li>
-          <li>Text</li>
-          <li>Markup</li>
-          <li>Language</li>
       </section>   
-      <section class="card" id="css-section">        
+
+      <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
+      </section>
+
       <section class="card" id="git-section">
-        <h2>Git</h2>
+      <h2>Git</h2>
         <ul>
-          <li>Enter your Git notes here</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
          </ul>
       </section>
        
       <section class="card" id="javascript-section">
-        <h2>JavaScript</h2>
+      <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
          </ul>
