--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
            width="850"
            height="730"
         />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
 
     <main>
@@ -55,5 +56,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src= "./assets/script.js"></script>
   </body>
 </html>
